--- a/app/templates/voting.html
+++ b/app/templates/voting.html
@@ -171,6 +171,7 @@
 							{% endfor %} </tbody>
 					</table>
 				</div>
+				<hr class="mobile-divisor">
 		</div>
 		{% endif %}
 		{% endfor %}
@@ -244,6 +245,7 @@
 				<span>Extremely likely</span>
 			</div>
 		</div>
+		<hr class="mobile-divisor">
 	</div>
 
 	<div class="voting-section">
