--- a/app/static/css/pages/roster/roster-mobile.css
+++ b/app/static/css/pages/roster/roster-mobile.css
@@ -12,7 +12,7 @@
     margin-bottom: 40px;
   }
 
-  #roster-meeting-filter {
+.roster-container .inline-filter-group {
     width: 100% !important;
     box-sizing: border-box;
     margin-bottom: 25px !important;
@@ -207,11 +207,4 @@
     line-height: normal !important;
   }
 
-  /* Standardize the container itself */
-  .roster-container .meeting-autocomplete-container {
-    height: var(--mobile-control-height, 36px) !important;
-    min-height: var(--mobile-control-height, 36px) !important;
-    width: 100% !important;
-    padding: 0 !important;
-  }
 }
