--- a/app/static/css/components/meeting_filter.css
+++ b/app/static/css/components/meeting_filter.css
@@ -7,7 +7,7 @@
 .meeting-autocomplete-container {
   position: relative;
   width: 100%;
-  max-width: 350px;
+  max-width: 500px;
   font-family: "Montserrat", sans-serif;
   min-width: 0;
   flex-grow: 1;
@@ -80,7 +80,8 @@
 }
 
 /* Search Wrapper & Dropdown Anchor Hook - Very Important */
-.search-input-wrapper {
+.search-input-wrapper,
+.custom-select-trigger {
   position: relative; /* Anchor for the dropdown */
   flex-grow: 1;
 }
